Add test for index page view

--- a/properties/templates/navbar.html
+++ b/properties/templates/navbar.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-light bg-light">
+<nav class="navbar navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand" href="{% url 'properties:index' %}">My Props</a>
     </div>
