Add fucntion logic fot contact request form and its validations

--- a/properties/templates/base.html
+++ b/properties/templates/base.html
@@ -21,6 +21,8 @@
 
     {% include 'navbar.html' %}
 
+    {% include 'messages.html' %}
+
     <div class="container">
         {% block body %}
         {% endblock body %}
