Add README file, and change next page button to spanish

--- a/properties/templates/index.html
+++ b/properties/templates/index.html
@@ -36,7 +36,7 @@
     {% if next_page %}
     <div class="row justify-content-center">
         <div class="col-md-3 col-sm-12 text-center">
-            <a type="button" class="btn btn-primary" href="{% url 'properties:index' page %}">Next page</a>
+            <a type="button" class="btn btn-primary" href="{% url 'properties:index' page %}">Página siguiente</a>
         </div>
     </div>
     {% endif %}
